--- a/_posts/Web-Jsp/2019-06-18-Jsp_Form.md
+++ b/_posts/Web-Jsp/2019-06-18-Jsp_Form.md
@@ -16,7 +16,7 @@ tags: [Web,Javascript,Jsp]
 <br>
 
 * 01_first.jsp
-```html
+```javascript
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 
@@ -85,7 +85,7 @@ tags: [Web,Javascript,Jsp]
 <br>
 
 * 02_getForm.jsp
-```html
+```javascript
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 
