--- a/_posts/Web-Jsp/2019-06-18-Jsp_Form.md
+++ b/_posts/Web-Jsp/2019-06-18-Jsp_Form.md
@@ -16,6 +16,9 @@ tags: [Web,Javascript,Jsp]
 <br>
 
 * 01_first.jsp
+
+<br>
+
 ```javascript
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
@@ -41,8 +44,10 @@ tags: [Web,Javascript,Jsp]
 
 <br>
 
+
 * 02_second.jsp
-```html
+
+```javascript
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 
