--- a/_posts/Web-Jsp/2019-06-18-Jsp_Form.md
+++ b/_posts/Web-Jsp/2019-06-18-Jsp_Form.md
@@ -32,7 +32,7 @@ tags: [Web,Javascript,Jsp]
 <body>
 
 <h3>로그인 확인하기 </h3>
-<form action="01_second.jsp" method="post"> <!-- form action="01_second.jsp" => 이 코드를 통해 01_second로 form의 데이터 전송  -->
+<form action="01_second.jsp" method="post"> <!-- form action="01_second.jsp" //이 코드를 통해 01_second로 form의 데이터 전송
 사용자: <input name='User' type='text'><br/>
 비밀번호: <input name='Pass' type='password'><br/>
 <input type='submit' value='login'>
@@ -57,7 +57,7 @@ tags: [Web,Javascript,Jsp]
 <title> 폼과 서블릿 </title></head>
 
 <body>
-	<form method="get" action="02_getForm.jsp">  <!--02_getForm.jsp와 연결  -->
+	<form method="get" action="02_getForm.jsp">  // 02_getForm.jsp와 연결
 		<h4>  입력 후 전송 버튼을 누릅니다 </h4>
 
 		이름	: <input type="text" name="name"><br/>
@@ -101,7 +101,7 @@ tags: [Web,Javascript,Jsp]
 	String name = request.getParameter("name");
 	String gender = request.getParameter("gender");
 	String job = request.getParameter("occupation");
-	String []hobby = request.getParameterValues("hobby");	<!-- 값 2개이상 받아오기 getParameterValues -->
+	String []hobby = request.getParameterValues("hobby");	// 값 2개이상 받아오기 getParameterValues
 
   <!-- checkbox의 선택값 가져오기  -->
 	String hobbystr = "";
