--- a/_posts/DS-Statistics/2019-06-20-Statics2.md
+++ b/_posts/DS-Statistics/2019-06-20-Statics2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 탐색적 데이터 분석
+title: 데이터와 표본분포
 comments: true
 categories: [Data Science/Statistics]
 tags: [Statistics,JupyterNotebook,Pandas,Numpy]
@@ -8,7 +8,7 @@ tags: [Statistics,JupyterNotebook,Pandas,Numpy]
 <br>
 
 
-# <center> 데이터와 표본분표 </center>
+# 데이터와 표본분표
 <br>
 
 
@@ -56,7 +56,7 @@ plt.xlabel('Data'),plt.ylabel('Count')
 
 
 
-<center><img src="https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_6_1.png" ></center>
+![png](output_4_1.png)
 
 
 
@@ -80,7 +80,7 @@ plt.xlabel('Data'),plt.ylabel('Count')
 
 
 
-<center><img src="https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_5_1.png" ></center>
+![png](output_5_1.png)
 
 
 
@@ -104,7 +104,7 @@ plt.xlabel('Data'),plt.ylabel('Count')
 
 
 
-<center><img src="https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_6_1.png" ></center>
+![png](output_6_1.png)
 
 
 * <b> 중심극한 정리 </b>
@@ -270,7 +270,7 @@ pylab.show()
 ```
 
 
-<center><img src="https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_17_0.png" ></center>
+![png](output_17_0.png)
 
 
 
@@ -290,7 +290,7 @@ stats.probplot(samp_data['x'], dist="norm", plot=pylab)
 
 
 
-<center><img src="https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_18_1.png" ></center>
+![png](output_18_1.png)
 
 
 
@@ -310,7 +310,7 @@ stats.probplot(boot_list, dist="norm", plot=pylab)
 
 
 
-<center><img src="https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_19_1.png" ></center>
+![png](output_19_1.png)
 
 
 <br>
@@ -346,7 +346,7 @@ pylab.show()
 ```
 
 
-<center><img src="https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_23_0.png" ></center>
+![png](output_23_0.png)
 
 
 <br>
@@ -443,4 +443,4 @@ ax.set(xlabel='Poisson', ylabel='Frequency')
 
 
 
-<center><img src="https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_28_1.png" ></center>
+![png](output_28_1.png)
