--- a/_posts/DS-Statistics/2019-06-20-Statics2.md
+++ b/_posts/DS-Statistics/2019-06-20-Statics2.md
@@ -54,9 +54,7 @@ plt.xlabel('Data'),plt.ylabel('Count')
     (Text(0.5,0,'Data'), Text(0,0.5,'Count'))
 
 
-
-
-![png](output_4_1.png)
+<img src="../assets/img/"output_4_1.png" >
 
 
 
