--- a/_posts/DS-Statistics/2019-06-17-statics1.md
+++ b/_posts/DS-Statistics/2019-06-17-statics1.md
@@ -32,180 +32,8 @@ df_1 = pd.read_csv('Pre_Season_Batter.csv')
 
 ```python
 # df_1
-df_1.head(5)
+# df_1.head(5)
 ```
-
-
-
-
-<div>
-<style scoped>
-    .dataframe tbody tr th:only-of-type {
-        vertical-align: middle;
-    }
-
-    .dataframe tbody tr th {
-        vertical-align: top;
-    }
-
-    .dataframe thead th {
-        text-align: right;
-    }
-</style>
-<table border="1" class="dataframe">
-  <thead>
-    <tr style="text-align: right;">
-      <th></th>
-      <th>batter_id</th>
-      <th>batter_name</th>
-      <th>year</th>
-      <th>team</th>
-      <th>avg</th>
-      <th>G</th>
-      <th>AB</th>
-      <th>R</th>
-      <th>H</th>
-      <th>2B</th>
-      <th>...</th>
-      <th>GDP</th>
-      <th>SLG</th>
-      <th>OBP</th>
-      <th>E</th>
-      <th>height/weight</th>
-      <th>year_born</th>
-      <th>position</th>
-      <th>career</th>
-      <th>starting_salary</th>
-      <th>OPS</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>0</th>
-      <td>0</td>
-      <td>가르시아</td>
-      <td>2018</td>
-      <td>LG</td>
-      <td>0.350</td>
-      <td>7</td>
-      <td>20</td>
-      <td>1</td>
-      <td>7</td>
-      <td>1</td>
-      <td>...</td>
-      <td>1</td>
-      <td>0.550</td>
-      <td>0.409</td>
-      <td>1</td>
-      <td>177cm/93kg</td>
-      <td>1985년 04월 12일</td>
-      <td>내야수(우투우타)</td>
-      <td>쿠바 Ciego de Avila Maximo Gomez Baez(대)</td>
-      <td>NaN</td>
-      <td>0.959</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>1</td>
-      <td>강경학</td>
-      <td>2011</td>
-      <td>한화</td>
-      <td>0.000</td>
-      <td>4</td>
-      <td>2</td>
-      <td>2</td>
-      <td>0</td>
-      <td>0</td>
-      <td>...</td>
-      <td>0</td>
-      <td>0.000</td>
-      <td>0.500</td>
-      <td>0</td>
-      <td>180cm/72kg</td>
-      <td>1992년 08월 11일</td>
-      <td>내야수(우투좌타)</td>
-      <td>광주대성초-광주동성중-광주동성고</td>
-      <td>10000만원</td>
-      <td>0.500</td>
-    </tr>
-    <tr>
-      <th>2</th>
-      <td>1</td>
-      <td>강경학</td>
-      <td>2014</td>
-      <td>한화</td>
-      <td>-</td>
-      <td>4</td>
-      <td>0</td>
-      <td>2</td>
-      <td>0</td>
-      <td>0</td>
-      <td>...</td>
-      <td>0</td>
-      <td>NaN</td>
-      <td>NaN</td>
-      <td>0</td>
-      <td>180cm/72kg</td>
-      <td>1992년 08월 11일</td>
-      <td>내야수(우투좌타)</td>
-      <td>광주대성초-광주동성중-광주동성고</td>
-      <td>10000만원</td>
-      <td>NaN</td>
-    </tr>
-    <tr>
-      <th>3</th>
-      <td>1</td>
-      <td>강경학</td>
-      <td>2015</td>
-      <td>한화</td>
-      <td>0.130</td>
-      <td>10</td>
-      <td>23</td>
-      <td>3</td>
-      <td>3</td>
-      <td>0</td>
-      <td>...</td>
-      <td>0</td>
-      <td>0.130</td>
-      <td>0.286</td>
-      <td>2</td>
-      <td>180cm/72kg</td>
-      <td>1992년 08월 11일</td>
-      <td>내야수(우투좌타)</td>
-      <td>광주대성초-광주동성중-광주동성고</td>
-      <td>10000만원</td>
-      <td>0.416</td>
-    </tr>
-    <tr>
-      <th>4</th>
-      <td>1</td>
-      <td>강경학</td>
-      <td>2016</td>
-      <td>한화</td>
-      <td>0.188</td>
-      <td>14</td>
-      <td>32</td>
-      <td>4</td>
-      <td>6</td>
-      <td>1</td>
-      <td>...</td>
-      <td>0</td>
-      <td>0.281</td>
-      <td>0.212</td>
-      <td>0</td>
-      <td>180cm/72kg</td>
-      <td>1992년 08월 11일</td>
-      <td>내야수(우투좌타)</td>
-      <td>광주대성초-광주동성중-광주동성고</td>
-      <td>10000만원</td>
-      <td>0.493</td>
-    </tr>
-  </tbody>
-</table>
-<p>5 rows × 29 columns</p>
-</div>
-
-
 
 <br>
 ##  데이터 명세
@@ -571,7 +399,7 @@ plt.show()
 ```
 
 
-![png](output_32_0.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_32_0.png)
 
 
 <br>
