--- a/_posts/DS-Statistics/2019-06-17-statics1.md
+++ b/_posts/DS-Statistics/2019-06-17-statics1.md
@@ -539,7 +539,7 @@ plt.xlabel('lifeExp'),plt.ylabel('frequency')
 
 
 
-![png](output_36_1.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_36_1.png)
 
 
 <br>
@@ -572,7 +572,7 @@ df_1.groupby('position')['position'].count().plot(kind='bar')
 
 
 
-![png](output_38_1.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_38_1.png)
 
 
 
@@ -588,7 +588,7 @@ df_1.groupby('position')['position'].count().plot(kind='pie')
 
 
 
-![png](output_39_1.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_39_1.png)
 
 
 <br>
@@ -870,7 +870,7 @@ df_1.plot(kind="scatter", x="HBP", y="TB", alpha=0.1)
 
 
 
-![png](output_45_1.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_45_1.png)
 
 
 
@@ -883,7 +883,7 @@ plt.show()
 ```
 
 
-![png](output_46_0.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_46_0.png)
 
 
 <br>
@@ -963,7 +963,7 @@ ax = kc_tax_hexbin.plot.hexbin(x='SqFtTotLiving', y='TaxAssessedValue', gridsize
 ```
 
 
-![png](output_50_0.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_50_0.png)
 
 
 <br>
@@ -1134,7 +1134,7 @@ loans_crosstab.loc['A',].plot(kind='bar')
 
 
 
-![png](output_56_1.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_56_1.png)
 
 
 
@@ -1144,7 +1144,7 @@ loans_crosstab2=loans_crosstab.loc['A',].sort_values().plot(kind='barh',title='A
 ```
 
 
-![png](output_57_0.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_57_0.png)
 
 
 <br>
@@ -1174,7 +1174,7 @@ plt.show()
 ```
 
 
-![png](output_61_0.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_61_0.png)
 
 
 <br>
@@ -1216,20 +1216,20 @@ selected_hexbin = kc_tax_selected.groupby('ZipCode').plot.hexbin(x='SqFtTotLivin
 ```
 
 
-![png](output_64_0.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_64_0.png)
 
 
 
-![png](output_64_1.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_64_1.png)
 
 
 
-![png](output_64_2.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_64_2.png)
 
 
 
-![png](output_64_3.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_64_3.png)
 
 
 
-![png](output_64_4.png)
+![png](https://github.com/bill7845/bill7845.github.io/raw/master/_posts/DS-Statistics/output_64_4.png)
