--- a/_posts/DS-Statistics/2019-06-20-statics2.md
+++ b/_posts/DS-Statistics/2019-06-20-statics2.md
@@ -1,5 +1,14 @@
+---
+layout: post
+title: EDA 탐색적 데이터 분석
+comments: true
+categories: [Data Science/Statistics]
+tags: [Statistics,JupyterNotebook,Pandas,Numpy]
+---
+<br>
 
-# 데이터와 표본분표
+# <center> 데이터와 표본분표 </center>
+
 <br>
 
 
@@ -35,7 +44,7 @@ samp_data = pd.read_csv('loans_income.csv')
 ## 모집단의 분포 살펴보기
 
 ## 1.1 모집단에서 1000개를 랜덤추출
-samp_data.sample(n=1000).hist()  # random sampling 
+samp_data.sample(n=1000).hist()  # random sampling
 plt.xlabel('Data'),plt.ylabel('Count')
 ```
 
@@ -54,7 +63,7 @@ plt.xlabel('Data'),plt.ylabel('Count')
 ```python
 ## 1.2 모집단에서 추출한 5개값의 평균 1000개
 sampled_data1 = []
-for i in range(1000): 
+for i in range(1000):
     ##arr = np.arange(len(samp_data)) ## np.random.choice 위해 이 과정 필요 혹은 아래
     sampled_data1.append(np.random.choice(len(samp_data),5).mean())  ## 모집단에서 5개 추출한 것들의 평균
 
@@ -103,8 +112,8 @@ plt.xlabel('Data'),plt.ylabel('Count')
 > 표본크기가 충분하고 데이터가 정규성을 크게 이탈하지 않는 경우, 여러 표본에서 추출한 평균은 종 모양의 정규곡선을 따른다
 
 <br>
-#### 2.1 표준오차 
-<br> 
+#### 2.1 표준오차
+<br>
 
 > 표준오차는 통계에 대한 표본분포의 변동성을 한마디로 말해주는 단일 측정 지표이다. <br>
 * <b>표준오차 측정시 고려사항</b> <br>
@@ -122,14 +131,14 @@ plt.xlabel('Data'),plt.ylabel('Count')
 <br>
 
 1. 샘플 값을 하나 뽑아서 기록하고 <b> 제자리에 놓는다 </b>
-2. n번 반복한다 
+2. n번 반복한다
 3. 재표본추출된 값의 평균을 기록한다
 4. 1~3단계를 R번 반복한다
 5. R개의 결과를 사용하여
         a. 그것들의 표준편차(표본평균의 표준오차)를 계산한다
         b. 히스토그램 또는 상자그림을 그린다
         c. 신뢰구간을 찾는다
-        
+
 <br>
 
 > 다변량 데이터에도 적용될 수 있다. 이때에 각 행은 여러 변수들의 값을 포함하는 하나의 샘플을 의미한다 <br>
@@ -138,7 +147,7 @@ plt.xlabel('Data'),plt.ylabel('Count')
 
 * <b> 부트스트랩은 표본크기가 작은것을 보완하기 위한 것이 아니다 </b> <br>
 * <b> 항상 관측된 데이터로부터 복원추출한다는것을 의미한다 </b>
-        
+
 
 
 ```python
@@ -155,7 +164,7 @@ sampled_data1 = np.random.choice(samp_data['x'],100,replace=True)  ## 우선 표
 
 boot_list = []
 
-for i in range(10000): ## 부트스트랩 1만번 돌리기 
+for i in range(10000): ## 부트스트랩 1만번 돌리기
 #     100명 표본데이터에서 100명을 "복원추출"하는것을 1만번 반복하기
     boot_list.append(np.random.choice(sampled_data1,100,replace=True).mean()) ## 부트스트래핑한 결과를 리스트에 저장 !!! (여기서는 부트스트래핑 데이터의 mean값)
 # boot_list    
@@ -164,9 +173,9 @@ for i in range(10000): ## 부트스트랩 1만번 돌리기
 
 <br>
 
-#### * np.random.choice() 
+#### * np.random.choice()
 
-<br> 
+<br>
 
 <b> np.random.choice(a, size=None, replace=True, p=None) </b>
 
@@ -200,9 +209,9 @@ for i in range(10000): ## 부트스트랩 1만번 돌리기
 
 <br>
 ## 2. 신뢰구간
-<br> 
+<br>
 
-> 단일 수치가 아닌 어떤 범위로 추정치를 제시 <br> 
+> 단일 수치가 아닌 어떤 범위로 추정치를 제시 <br>
 > 90% 신뢰구간이란, 표본통계량의 부트스트랩 표본분포의 90%를 포함하는 구간 <br>
 > 즉, x% 신뢰구간이란, 평균적으로 유사한 표본추정치 x%정도가 포함되어야 한다 <br>
 <br>
@@ -248,7 +257,7 @@ np.percentile(boot_list, 0.5), np.percentile(boot_list, 99.5)
 ## 표본이 정규분포에 얼마나 가까운지를 시각적으로 판별하는 QQ그림
 ## z-Score를 오름차순으로 정렬하고 각 값의 z-Score Y축에 표시한다. (X축은 정규분포에서의 해당 분위수)
 ## 점들이 대각선에 가까운 형태로 나타나면 정규분포에 가까운것으로 간주할 수 있다.
-import pylab 
+import pylab
 import scipy.stats as stats
 
 ## 정규분포 데이터 생성하기
@@ -314,7 +323,7 @@ stats.probplot(boot_list, dist="norm", plot=pylab)
 <br>
 
 * 꼬리(tail) : 적은 수의 극단값이 주로 존재하는, 도수분포의 길고 좁은 부분
-* 왜도(skewness) : 분포의 한쪽 꼬리가 반대쪽 다른 꼬리보다 긴 정도 
+* 왜도(skewness) : 분포의 한쪽 꼬리가 반대쪽 다른 꼬리보다 긴 정도
 <br>
 
 
@@ -376,7 +385,7 @@ print(binom_possible)
 
     1
     0.513
-    
+
 
 
 ```python
@@ -389,7 +398,7 @@ print(binom_possible)
 ```
 
     0
-    
+
 
 <br>
 ## 6. 푸아송 분포
@@ -398,7 +407,7 @@ print(binom_possible)
 > 표집된 단위 시간 혹은 단위 공간에서 발생한 사건의 도수분표 <br>
 > 시간 단위 또는 공간 단위로 표본들을 수집할 경우 그 사건들의 분포를 나타냄 <br>
 > ex) 5초동안 서버에 도착한 트래픽을 95%의 확률로 완벽하게 처리하는 데 필요한 용량은 얼마일까? ( :대기행렬) <br>
-> ex) 어느 특정지역에서 하루 동안 발생하는 교통사고 건 수 <br> 
+> ex) 어느 특정지역에서 하루 동안 발생하는 교통사고 건 수 <br>
 > ex) 회사 교환대에 10분 동안 걸려오는 전화의 수
 <br>
 
@@ -435,4 +444,3 @@ ax.set(xlabel='Poisson', ylabel='Frequency')
 
 
 ![png](output_28_1.png)
-
