--- a/_posts/DS-Statistics/2019-06-17-statics1.md
+++ b/_posts/DS-Statistics/2019-06-17-statics1.md
@@ -1,13 +1,13 @@
 ---
 layout: post
-title: 데이터 표본
+title: 데이터 표본분포
 comments: true
 categories: [Data Science/Statistics]
 tags: [Statistics,JupyterNotebook,Pandas,Numpy]
 ---
 <br>
 
-# <center> EDA </center>
+# <center> 데이터와 표본분포 </center>
 
 <br>
 
