--- a/_posts/DS-Statistics/2019-06-17-statics1.md
+++ b/_posts/DS-Statistics/2019-06-17-statics1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 데이터 표본분포
+title: EDA 탐색적 데이터 분석
 comments: true
 categories: [Data Science/Statistics]
 tags: [Statistics,JupyterNotebook,Pandas,Numpy]
