--- a/_posts/DS-Statistics/2019-06-20-statics2.md
+++ b/_posts/DS-Statistics/2019-06-20-statics2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: EDA 탐색적 데이터 분석
+title: 데이터와 표본분포
 comments: true
 categories: [Data Science/Statistics]
 tags: [Statistics,JupyterNotebook,Pandas,Numpy]
